kubernetes/networkpolicy/01-frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: frontend-policy
  namespace: habiba-dev

spec:
  podSelector:
    matchLabels:
      app: catalogue

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front-end
