kubernetes/networkpolicy/03-carts-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-db-policy
  namespace: habiba-dev
spec:
  podSelector:
    matchLabels:
      app: carts-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: carts
      ports:
        - protocol: TCP
          port: 27017
